@@ -3,6 +3,8 @@ fakechroot (2.9-1) unstable; urgency=medium
   * src/libfakechroot.c:
     - Fixed getpeername(2) and getsockname(2).  Thanks to Axel Thimm and
       Fedora people.
+    - Fixed were made for execve(2).  Always copy necessary variables to new
+      environment.
     - New function: futimesat(2).  Fixes "touch -m" command.
     - New function: bindtextdomain(3).
   * debian/packages:
